--- a/angular18/package.json
+++ b/angular18/package.json
@@ -33,9 +33,12 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.19",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.1.1",
     "ng-mocks": "^14.13.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.2"
   }
